--- a/style.css
+++ b/style.css
@@ -3,3 +3,41 @@
     padding:0;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+body{
+    background-color:#8dbae7;
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+
+}
+.container {
+    background: white;
+    width: 400px;
+    padding: 25px;
+    border-radius: 8px;
+    box-shadow: 4px 4px 10px rgba(130, 19, 19, 0.08);
+
+}
+h1{
+    text-align: center;
+    margin-bottom: 20px;
+}
+.input-section{
+    display: flex;
+    gap: 10px;
+}
+#task-input{
+    flex:1;
+    padding:10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+#add-btn {
+  padding: 10px 15px;
+  background: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
